Bug 1565980. Force wmode 'gpu' to 'direct'. r=jmathies, a=RyanVM

This fixes wmode='gpu' with WebRender.

Differential Revision: https://phabricator.services.mozilla.com/D39420